[fix] button & layout issues

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2451,14 +2451,16 @@ table.alt tfoot {
   line-height: 40px;
   white-space: nowrap;
   border-radius: 999px;
-  transition: transform 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  margin-right: 0;
+  transition: transform 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275), margin 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
   transform: scale(1);
 }
 
 .button:hover {
+  margin-right: 50px;
   transform: scale(1.1);
   transition: transform 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275),
-    box-shadow 0.5s ease 0.3s;
+    box-shadow 0.5s ease 0.3s, margin 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
   box-shadow: 0px 5px 15px var(--color-highlight-shadow);
 }
 
